GNOME Bugzilla – Bug 772296
Fix build errors/warnings
Last modified: 2016-10-06 17:19:49 UTC
master does not build for me (using Clang). Attaching a fix for that and a warning.
Created attachment 336730 [details] [review] debug: include gxps-version.h for GXPS_VAR GXPS_VAR is defined in gxps-version.h, which is not being included, resulting in build failure.
Created attachment 336731 [details] [review] path: do not return from print_token() print_token() should not return a value, but does.
Review of attachment 336730 [details] [review]: Thanks ::: libgxps/gxps-debug.h @@ +22,3 @@ #include <glib.h> +#include <gxps-version.h> This header is not installed, so better use "gxps-version.h" instead.
Review of attachment 336731 [details] [review]: oops, thanks!
Created attachment 336824 [details] [review] debug: include gxps-version.h for GXPS_VAR GXPS_VAR is defined in gxps-version.h, which is not being included, resulting in build failure.
(In reply to Carlos Garcia Campos from comment #3) > This header is not installed, so better use "gxps-version.h" instead. My rationale for that was that the header is generated and not placed in the same directory where the including file resides. But I will not argue, as it works all the same. :)
Attachment 336731 [details] pushed as 95decf1 - path: do not return from print_token() Attachment 336824 [details] pushed as 72e8737 - debug: include gxps-version.h for GXPS_VAR