debug: include gxps-version.h for GXPS_VAR

GXPS_VAR is defined in gxps-version.h, which is not being included,
resulting in build failure.

https://bugzilla.gnome.org/show_bug.cgi?id=772296